samples/_failures_safe/1761250573_967c36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21bc15a5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_21bc15a5.c:157:5: error: expected expression at end of input
  157 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_21bc15a5.c:157:5: error: expected declaration or statement at end of input
